# riscv_simulator

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.hpp  instruction.hpp  memory.hpp  simulator.hpp
programs/: README.md  arithmetic.s  infinite_loop.s  memory.s  quicksort.s
scr/: main.cpp
src/: cpu.cpp  instruction.cpp  main.cpp  memory.cpp  simulator.cpp
tests/: run_tests.py
